fix - archive page component separation, desktop category scroll button

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,3 +43,9 @@
   border-radius: 9999px;
   background-color: #f9b20b;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+  display: none;
+}
